--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^4.18.1",
     "express-async-errors": "^3.1.1",
     "morgan": "^1.10.0",
+    "mysql2": "^2.3.3",
     "nodemon": "^2.0.20"
   }
 }
